feat: implement signed addition for the first number

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@ Features to add:
 2. Implement support for sign numbers
 3. Implement support for floating point arithmetics
 4. When there is a bad imput program restarts and user is prompted to add a number another time (rather than exiting a program) ⭐️⭐️⭐️
-5. Print the whole equation in a terminal (To get used to printing stuff for Data Structures projects) ⭐️⭐️
+5. Print the whole equation in a terminal (To get used to printing stuff for Data Structures projects) ✅
 6. Allow user to select stuff with arrows
 7. Create unit tests ⭐️
 
