--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,17 @@
 Features to add:
-1. Display correctly 2 digit result for multiplication ✅
+- Allow 2 digit numbers
+- Implement support for floating point arithmetics
+- When there is a bad imput program restarts and user is prompted to add a number another time (rather than exiting a program)
+- Allow user to select stuff with arrows
+- Create unit tests
+
+v1.4 (WIP)
+- Display correctly 2 digit result for multiplication ✅ (dev)
     e.g., currently 7*8 gives giberrish
-2. Implement support for sign numbers
-3. Implement support for floating point arithmetics
-4. When there is a bad imput program restarts and user is prompted to add a number another time (rather than exiting a program) ⭐️⭐️⭐️
-5. Print the whole equation in a terminal (To get used to printing stuff for Data Structures projects) ✅
-6. Allow user to select stuff with arrows
-7. Create unit tests ⭐️
+- Print the whole equation in a terminal (To get used to printing stuff for Data Structures projects) ✅ (dev)
+- Implement support for sign numbers (WIP)
 
-v1.4
-
-v1.3
+v1.3 (merged to master)
 Improvements:
 - Code comments added
 - Macro for input check
